Cleaned and reformatted all views to correct duplicate imports causing wrong behaviors as well as improve readability.

--- a/trndiiapp/resources/assets/sass/_custom.scss
+++ b/trndiiapp/resources/assets/sass/_custom.scss
@@ -85,3 +85,17 @@ a {
   background-color: $navbar-default-bg;
   border-color: $navbar-default-bg;
 }
+
+.navbar-default .navbar-toggle .icon-bar{
+  background-color: white;
+}
+
+.navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus{
+  background-color: #12735e;
+}
+
+@media (max-width: 767px) {
+  .navbar-default .navbar-nav .open .dropdown-menu > li > a {
+    color: white;
+  }
+}
